# tsumugi

./: Cargo.toml  README.md  clippy.toml  deny.toml
.claude/agents/: code-reviewer.md  issue-implementer.md
.claude/skills/auto-issue-worker/: SKILL.md
.claude/skills/run-oneshot/: SKILL.md
.claude/skills/run-tui/: SKILL.md
.claude/skills/verify/: SKILL.md
crates/tmg-agents/: Cargo.toml
crates/tmg-agents/src/: builtins.rs  config.rs  custom.rs  discovery.rs  endpoint_resolver.rs  error.rs  escalator.rs  lib.rs  manager.rs  runner.rs  status.rs
crates/tmg-agents/src/tools/: mod.rs  spawn_agent.rs
crates/tmg-core/: Cargo.toml
crates/tmg-core/src/: agent_loop.rs  context.rs  error.rs  event_log.rs  lib.rs  message.rs  prompt.rs
crates/tmg-harness/: Cargo.toml
crates/tmg-harness/src/: commands.rs  error.rs  lib.rs  run.rs  runner.rs  session.rs  sink.rs  state.rs  store.rs  tui_sentinel.rs
crates/tmg-harness/src/artifacts/: features.rs  init_script.rs  mod.rs  progress.rs  session_log.rs
crates/tmg-harness/src/escalation/: config.rs  keywords.rs  launcher.rs  mod.rs
crates/tmg-harness/src/tools/: feature_list_mark_passing.rs  feature_list_read.rs  mod.rs  progress_append.rs  run_tool_provider.rs  session_bootstrap.rs  session_summary_save.rs
crates/tmg-harness/tests/: skill_pipeline.rs
crates/tmg-llm/: Cargo.toml
crates/tmg-llm/src/: client.rs  error.rs  lib.rs  pool.rs  pool_config.rs  prompt_tool_calling.rs  tokenize.rs  types.rs
crates/tmg-llm/tests/: prompt_tool_calling_proptest.rs
crates/tmg-memory/: Cargo.toml
crates/tmg-memory/src/: budget.rs  entry.rs  error.rs  lib.rs  store.rs  tool.rs
crates/tmg-sandbox/: Cargo.toml
crates/tmg-sandbox/src/: config.rs  context.rs  error.rs  lib.rs  mode.rs  process.rs
crates/tmg-sandbox/src/platform/: fallback.rs  linux.rs  mod.rs
crates/tmg-sandbox/src/platform/linux/: landlock.rs  mod.rs  netns.rs  network_acl.rs
crates/tmg-sandbox/tests/: network_acl.rs
crates/tmg-search/: Cargo.toml
crates/tmg-search/src/: error.rs  index.rs  lib.rs  redact.rs  tool.rs
crates/tmg-skills/: Cargo.toml
crates/tmg-skills/src/: banner.rs  config.rs  critic.rs  discovery.rs  emergence.rs  error.rs  lib.rs  loader.rs  manage.rs  metrics.rs  parse.rs  runtime.rs  slash.rs  tool.rs  types.rs
crates/tmg-skills/tests/: critic_pipeline.rs
crates/tmg-tools/: Cargo.toml
crates/tmg-tools/src/: error.rs  lib.rs  path_util.rs  signatures.rs  types.rs
crates/tmg-tools/src/tools/: file_patch.rs  file_read.rs  file_write.rs  grep_search.rs  list_dir.rs  mod.rs  shell_exec.rs
crates/tmg-tools/tests/: registry_integration.rs
crates/tmg-trajectory/: Cargo.toml
crates/tmg-trajectory/src/: bundle.rs  config.rs  error.rs  export.rs  lib.rs  record.rs  recorder.rs  redact.rs  sink.rs
crates/tmg-tui/: Cargo.toml
crates/tmg-tui/src/: activity.rs  app.rs  banner.rs  diff.rs  error.rs  event.rs  human_prompt.rs  lib.rs  ui.rs
crates/tmg-tui/tests/: workflow_progress_wiring.rs
crates/tmg-workflow/: Cargo.toml
crates/tmg-workflow/src/: config.rs  def.rs  discovery.rs  engine.rs  error.rs  expr.rs  lib.rs  long_running.rs  parse.rs  progress.rs  templates.rs
crates/tmg-workflow/src/steps/: agent.rs  branch.rs  group.rs  human.rs  loop_step.rs  mod.rs  parallel.rs  path_util.rs  shell.rs  workflow.rs  write_file.rs
crates/tmg-workflow/src/tools/: mod.rs  run_workflow.rs  types.rs  workflow_status.rs
crates/tmg-workflow/templates/harness/: add-feature.yaml  bug-fix-batch.yaml  build-app.yaml  migrate-codebase.yaml
crates/tmg-workflow/templates/skills/develop/: SKILL.md
crates/tmg-workflow/templates/workflows/: implement.yaml  plan.yaml  refactor.yaml  review.yaml
crates/tmg-workflow/tests/: agent_inject_files.rs  agent_isolation.rs  agent_two_step_isolation.rs  control_flow.rs  engine_sequential.rs  long_running.rs  pipeline.rs  run_workflow_tool.rs  tui_progress_wiring.rs
tmg-cli/: Cargo.toml
tmg-cli/src/: config.rs  error.rs  harness_init.rs  init_command.rs  main.rs  memory_commands.rs  pool_setup.rs  run_commands.rs  trajectory_commands.rs  workflow_commands.rs
tmg-cli/tests/: init_and_workflow.rs
