[workspace]
resolver = "3"
members = [
    "crates/tmg-core",
    "crates/tmg-llm",
    "crates/tmg-memory",
    "crates/tmg-search",
    "crates/tmg-tools",
    "crates/tmg-skills",
    "crates/tmg-agents",
    "crates/tmg-sandbox",
    "crates/tmg-tui",
    "crates/tmg-harness",
    "crates/tmg-workflow",
    "crates/tmg-trajectory",
    "tmg-cli",
]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tokio-util = "0.7"
tokio-stream = "0.1"

# Streaming
futures-core = "0.3"
pin-project-lite = "0.2"

# HTTP & streaming
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
eventsource-stream = "0.2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
serde_yml = "0.0.12"

# TUI
ratatui = "0.29"
crossterm = "0.28"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Logging / diagnostics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Random
rand = "0.9"

# Regex
regex = "1"

# SQLite (FTS5 search index in tmg-search)
# `bundled` ships sqlite3 with the crate so we don't depend on a system
# library; the bundled build enables FTS5 by default. See issue #53.
rusqlite = { version = "0.32", features = ["bundled"] }

# Tree-sitter (signature extraction in tmg-tools)
tree-sitter = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-python = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"

# Unicode
unicode-width = "0.2"

# Platform directories
dirs = "6"

# Time
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
humantime = "2"
humantime-serde = "1"

# UUID
uuid = { version = "1", features = ["v4"] }

# Testing
tempfile = "3"
proptest = "1"

# Sandbox
landlock = "0.4"
libc = "0.2"

# Archive (tmg-trajectory bundle)
tar = "0.4"
zstd = "0.13"

# Workspace crates
tmg-core = { path = "crates/tmg-core" }
tmg-llm = { path = "crates/tmg-llm" }
tmg-memory = { path = "crates/tmg-memory" }
tmg-search = { path = "crates/tmg-search" }
tmg-tools = { path = "crates/tmg-tools" }
tmg-skills = { path = "crates/tmg-skills" }
tmg-agents = { path = "crates/tmg-agents" }
tmg-sandbox = { path = "crates/tmg-sandbox" }
tmg-tui = { path = "crates/tmg-tui" }
tmg-harness = { path = "crates/tmg-harness" }
tmg-workflow = { path = "crates/tmg-workflow" }
tmg-trajectory = { path = "crates/tmg-trajectory" }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
dbg_macro = "deny"
todo = "deny"
print_stdout = "deny"
print_stderr = "deny"
allow_attributes = "deny"
await_holding_lock = "deny"
large_futures = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
