[package]
name = "tmg-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tmg-core = { workspace = true }
tmg-llm = { workspace = true }
tmg-tui = { workspace = true }

[lints]
workspace = true
