[package]
name = "tmg-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "tmg"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync"] }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tmg-agents = { workspace = true }
tmg-core = { workspace = true }
tmg-harness = { workspace = true }
tmg-llm = { workspace = true }
tmg-sandbox = { workspace = true }
tmg-skills = { workspace = true }
tmg-tools = { workspace = true }
tmg-tui = { workspace = true }
tmg-workflow = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
