[package]
name = "tmg-agents"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tmg-llm = { workspace = true }
tmg-tools = { workspace = true }
tmg-sandbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["sync", "fs"] }
tokio-util = { workspace = true }
tokio-stream = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "fs"] }
tempfile = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
