[package]
name = "tmg-harness"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = ["sync", "process", "time"] }
tracing = { workspace = true }
uuid = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

# Workspace crates
tmg-agents = { workspace = true }
tmg-core = { workspace = true }
tmg-sandbox = { workspace = true }
tmg-skills = { workspace = true }
tmg-tools = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync", "process", "time"] }

[lints]
workspace = true
