[package]
name = "tmg-llm"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
eventsource-stream = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-core = { workspace = true }
pin-project-lite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
toml = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
