[package]
name = "tmg-memory"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tmg-sandbox = { workspace = true }
tmg-tools = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }
regex = { workspace = true }
# `tracing` is wired into store / tool mutation paths so debugging
# memory regressions is possible without `--event-log`. Issue #10 of
# PR #76 review suggested either dropping `tracing` (it had been
# unused) or wiring it; we wire it.
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
# Tests use `#[tokio::test]` for the async tool surface; keep tokio in
# `dev-dependencies` only since the production code is synchronous.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints]
workspace = true
