[package]
name = "tmg-skills"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tmg-tools = { workspace = true }
tmg-llm = { workspace = true }
tmg-sandbox = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "sync"] }
dirs = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs"] }
tempfile = { workspace = true }
proptest = { workspace = true }
# Integration test (`tests/critic_pipeline.rs`) exercises
# `SkillManageTool` through the canonical `tmg_tools::ToolRegistry`
# dispatch path.
tmg-tools = { workspace = true }

[lints]
workspace = true
