[package]
name = "tmg-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tmg-core = { workspace = true }
tmg-llm = { workspace = true }
tmg-agents = { workspace = true }
tmg-harness = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync"] }
tokio-util = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }

[lints]
workspace = true
