[package]
name = "tmg-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tmg-core = { workspace = true }
tmg-llm = { workspace = true }
tmg-agents = { workspace = true }
tmg-harness = { workspace = true }
tmg-memory = { workspace = true }
tmg-search = { workspace = true }
tmg-skills = { workspace = true }
tmg-workflow = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
syntect = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["signal", "sync", "time"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
unicode-width = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tmg-sandbox = { workspace = true }
tmg-tools = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync"] }

[lints]
workspace = true
